feat(ui/components"): add storybook components and moluecule components

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,12 +12,14 @@
   },
   "dependencies": {
     "@radix-ui/react-slot": "^1.2.3",
+    "@radix-ui/react-switch": "^1.2.5",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.511.0",
     "next": "15.3.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-dropzone": "^14.3.8",
     "tailwind-merge": "^3.3.0"
   },
   "devDependencies": {
@@ -33,11 +35,14 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "autoprefixer": "^10.4.21",
     "eslint": "^9",
     "eslint-config-next": "15.3.2",
     "eslint-plugin-storybook": "^0.12.0",
+    "postcss": "^8.5.4",
+    "postcss-loader": "^8.1.1",
     "storybook": "^8.6.14",
-    "tailwindcss": "^4",
+    "tailwindcss": "^4.1.8",
     "tw-animate-css": "^1.3.0",
     "typescript": "^5"
   },
