--- a/backend/package.json
+++ b/backend/package.json
@@ -24,11 +24,23 @@
     "@nestjs/config": "^4.0.2",
     "@nestjs/core": "^11.0.1",
     "@nestjs/platform-express": "^11.1.3",
+    "@nestjs/serve-static": "^5.0.3",
     "@supabase/supabase-js": "^2.50.0",
+    "@types/jszip": "^3.4.0",
+    "docx": "^9.5.1",
+    "docx-preview": "^0.3.5",
+    "docxtemplater": "^3.65.0",
+    "fast-xml-parser": "^5.2.5",
+    "jsdom": "^26.1.0",
+    "jszip": "^3.10.1",
+    "libreoffice-convert": "^1.6.1",
     "mammoth": "^1.9.1",
     "multer": "^2.0.1",
+    "office-text-extractor": "^3.0.3",
+    "pizzip": "^3.2.0",
     "reflect-metadata": "^0.2.2",
-    "rxjs": "^7.8.1"
+    "rxjs": "^7.8.1",
+    "xmldom": "^0.6.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.2.0",
@@ -40,9 +52,11 @@
     "@swc/core": "^1.10.7",
     "@types/express": "^5.0.0",
     "@types/jest": "^29.5.14",
+    "@types/jsdom": "^21.1.7",
     "@types/multer": "^1.4.13",
     "@types/node": "^22.10.7",
     "@types/supertest": "^6.0.2",
+    "@types/xmldom": "^0.1.34",
     "eslint": "^9.18.0",
     "eslint-config-prettier": "^10.0.1",
     "eslint-plugin-prettier": "^5.2.2",
