--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,7 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "copy-webviewer": "if not exist .\\public\\lib\\webviewer mkdir .\\public\\lib\\webviewer && xcopy .\\node_modules\\@pdftron\\webviewer\\public\\* .\\public\\lib\\webviewer\\ /E /I /Y",
+    "dev": "npm run copy-webviewer && next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
@@ -11,6 +12,30 @@
     "build-storybook": "storybook build"
   },
   "dependencies": {
+    "@ckeditor/ckeditor5-alignment": "^41.4.2",
+    "@ckeditor/ckeditor5-autoformat": "^41.4.2",
+    "@ckeditor/ckeditor5-basic-styles": "^41.4.2",
+    "@ckeditor/ckeditor5-build-classic": "^41.4.2",
+    "@ckeditor/ckeditor5-dev-utils": "^41.4.2",
+    "@ckeditor/ckeditor5-editor-classic": "^41.4.2",
+    "@ckeditor/ckeditor5-essentials": "^41.4.2",
+    "@ckeditor/ckeditor5-find-and-replace": "^41.4.2",
+    "@ckeditor/ckeditor5-font": "^41.4.2",
+    "@ckeditor/ckeditor5-heading": "^41.4.2",
+    "@ckeditor/ckeditor5-horizontal-line": "^41.4.2",
+    "@ckeditor/ckeditor5-image": "^41.4.2",
+    "@ckeditor/ckeditor5-indent": "^41.4.2",
+    "@ckeditor/ckeditor5-link": "^41.4.2",
+    "@ckeditor/ckeditor5-list": "^41.4.2",
+    "@ckeditor/ckeditor5-media-embed": "^41.4.2",
+    "@ckeditor/ckeditor5-page-break": "^41.4.2",
+    "@ckeditor/ckeditor5-paragraph": "^41.4.2",
+    "@ckeditor/ckeditor5-react": "^9.5.0",
+    "@ckeditor/ckeditor5-source-editing": "^41.4.2",
+    "@ckeditor/ckeditor5-table": "^41.4.2",
+    "@ckeditor/ckeditor5-theme-lark": "^41.4.2",
+    "@ckeditor/ckeditor5-typing": "^41.4.2",
+    "@pdftron/webviewer": "^11.5.0",
     "@radix-ui/react-checkbox": "^1.3.2",
     "@radix-ui/react-dialog": "^1.1.14",
     "@radix-ui/react-dropdown-menu": "^2.1.15",
@@ -64,6 +89,7 @@
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "autoprefixer": "^10.4.21",
+    "copy-webpack-plugin": "^13.0.0",
     "eslint": "^9",
     "eslint-config-next": "15.3.2",
     "eslint-plugin-storybook": "^0.12.0",
