--- a/backend/package.json
+++ b/backend/package.json
@@ -28,6 +28,7 @@
     "@nestjs/serve-static": "^5.0.3",
     "@supabase/supabase-js": "^2.50.0",
     "@types/jszip": "^3.4.0",
+    "class-validator": "^0.14.2",
     "docx": "^9.5.1",
     "docx-preview": "^0.3.5",
     "docxtemplater": "^3.65.0",
