--- a/backend/package.json
+++ b/backend/package.json
@@ -26,6 +26,7 @@
     "@nestjs/core": "^11.0.1",
     "@nestjs/platform-express": "^11.1.3",
     "@nestjs/serve-static": "^5.0.3",
+    "@nestjs/typeorm": "^11.0.0",
     "@supabase/supabase-js": "^2.50.0",
     "@types/jszip": "^3.4.0",
     "class-validator": "^0.14.2",
@@ -39,10 +40,12 @@
     "mammoth": "^1.9.1",
     "multer": "^2.0.1",
     "office-text-extractor": "^3.0.3",
+    "pg": "^8.16.3",
     "pizzip": "^3.2.0",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
     "simple-odf": "^3.0.3",
+    "typeorm": "^0.3.25",
     "xmldom": "^0.6.0",
     "zod": "^3.25.74"
   },
