--- a/backend/package.json
+++ b/backend/package.json
@@ -24,15 +24,18 @@
     "@nestjs/common": "^11.0.1",
     "@nestjs/config": "^4.0.2",
     "@nestjs/core": "^11.0.1",
+    "@nestjs/mapped-types": "*",
     "@nestjs/platform-express": "^11.1.3",
     "@nestjs/serve-static": "^5.0.3",
     "@nestjs/typeorm": "^11.0.0",
     "@supabase/supabase-js": "^2.50.0",
     "@types/jszip": "^3.4.0",
+    "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
     "docx": "^9.5.1",
     "docx-preview": "^0.3.5",
     "docxtemplater": "^3.65.0",
+    "dotenv": "^17.2.1",
     "fast-xml-parser": "^5.2.5",
     "jsdom": "^26.1.0",
     "jszip": "^3.10.1",
