--- a/backend/package.json
+++ b/backend/package.json
@@ -40,6 +40,7 @@
     "docxtemplater": "^3.65.0",
     "dotenv": "^17.2.1",
     "fast-xml-parser": "^5.2.5",
+    "ioredis": "^5.6.1",
     "jsdom": "^26.1.0",
     "jszip": "^3.10.1",
     "libreoffice-convert": "^1.6.1",
@@ -48,6 +49,7 @@
     "office-text-extractor": "^3.0.3",
     "pg": "^8.16.3",
     "pizzip": "^3.2.0",
+    "redis": "^4.7.1",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
     "simple-odf": "^3.0.3",
